modified book template

--- a/bfhlatex/bfhtemplatebook.tex
+++ b/bfhlatex/bfhtemplatebook.tex
@@ -91,6 +91,8 @@
 % Possible Color Values: Green, Blue, Purple, Brown 
 \newcommand{\seccolor}{BFHLightGreen} 
 
+\newcommand{\Tel}[2]{Tel: (#1): #2}
+
 \setcounter{secnumdepth}{4}
 \setcounter{tocdepth}{4}
 
@@ -145,6 +147,8 @@ int main(int argc, char* argv[]) {
 
 % Floating Objects
 \blindtext asdf\index{Guggus}
+\Tel{mobil}{079 123 45 67}
+
 
 % Example for a Table in BFH-Style with a simple Design
 \begin{table}[ht]
@@ -174,6 +178,7 @@ int main(int argc, char* argv[]) {
 	\label{tab:tab1}
 	\end{center}
 \end{table}
+
 %
 \section{Section}
 \blindtext
